updated .gitignore to include more system files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Compiled Files #
+##################
 *.exe
+
+
+# OS Files #
+############
 .DS_Store
-._.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
